@@ -6,7 +6,8 @@ import edu.fpt.sba301.bookstore.dto.response.ApiResponse;
 import edu.fpt.sba301.bookstore.entity.Address;
 import edu.fpt.sba301.bookstore.entity.User;
 import edu.fpt.sba301.bookstore.repository.AddressRepository;
-import edu.fpt.sba301.bookstore.repository.UserRepository;
+import edu.fpt.sba301.bookstore.support.ApiResponseSupport;
+import edu.fpt.sba301.bookstore.support.CurrentUserService;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
@@ -17,138 +18,102 @@ import org.springframework.web.server.ResponseStatusException;
 
 import java.security.Principal;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
-@RequestMapping("api/auth/me/addresses")
+@RequestMapping("/api/auth/me/addresses")
 @RequiredArgsConstructor
 public class AddressController {
 
     private final AddressRepository addressRepository;
-    private final UserRepository userRepository;
+    private final CurrentUserService currentUserService;
 
     @GetMapping
+    @Transactional(readOnly = true)
     public ResponseEntity<ApiResponse<List<AddressResponse>>> getAddresses(Principal principal) {
-        User user = userRepository.findByEmail(principal.getName())
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "User not found"));
-
-        List<AddressResponse> data = addressRepository.findAllByUserId(user.getId())
-                .stream()
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
-
-        ApiResponse<List<AddressResponse>> response = new ApiResponse<>();
-        response.setCode(200);
-        response.setMessage("OK");
-        response.setData(data);
-
-        return ResponseEntity.ok(response);
+        User user = currentUserService.requireUser(principal);
+        List<AddressResponse> data = addressRepository.findAllByUserId(user.getId()).stream()
+                .map(this::toResponse)
+                .toList();
+        return ApiResponseSupport.ok(data);
     }
 
     @PostMapping
     @Transactional
-    public ResponseEntity<ApiResponse<AddressResponse>> createAddress(Principal principal,
-                                                                      @Valid @RequestBody AddressRequest request) {
-        User user = userRepository.findByEmail(principal.getName())
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "User not found"));
+    public ResponseEntity<ApiResponse<AddressResponse>> createAddress(
+            Principal principal,
+            @Valid @RequestBody AddressRequest request) {
+        User user = currentUserService.requireUser(principal);
+        boolean makeDefault = Boolean.TRUE.equals(request.isDefault())
+                || addressRepository.findAllByUserId(user.getId()).isEmpty();
 
-        if (Boolean.TRUE.equals(request.isDefault())) {
-            unsetOtherDefaults(user.getId());
+        if (makeDefault) {
+            clearDefaultFlag(user.getId());
         }
 
         Address address = new Address();
         address.setUser(user);
-        address.setRecipient(request.recipient());
-        address.setPhone(request.phone());
-        address.setLine(request.line());
-        address.setCity(request.city());
-        address.setIsDefault(request.isDefault());
-
-        Address saved = addressRepository.save(address);
-
-        ApiResponse<AddressResponse> response = new ApiResponse<>();
-        response.setCode(201);
-        response.setMessage("Created");
-        response.setData(mapToResponse(saved));
-
-        return ResponseEntity.status(HttpStatus.CREATED).body(response);
+        applyRequest(address, request, makeDefault);
+        address = addressRepository.save(address);
+        return ApiResponseSupport.created(toResponse(address));
     }
 
     @PutMapping("/{id}")
     @Transactional
-    public ResponseEntity<ApiResponse<AddressResponse>> updateAddress(Principal principal,
-                                                                      @PathVariable Long id,
-                                                                      @Valid @RequestBody AddressRequest request) {
-        User user = userRepository.findByEmail(principal.getName())
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "User not found"));
-
-        Address address = addressRepository.findById(id)
+    public ResponseEntity<ApiResponse<AddressResponse>> updateAddress(
+            Principal principal,
+            @PathVariable Long id,
+            @Valid @RequestBody AddressRequest request) {
+        User user = currentUserService.requireUser(principal);
+        Address address = addressRepository.findByIdAndUserId(id, user.getId())
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Address not found"));
 
-        if (!address.getUser().getId().equals(user.getId())) {
-            throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Access denied");
+        Boolean requestedDefault = request.isDefault();
+        if (Boolean.TRUE.equals(requestedDefault)) {
+            clearDefaultFlag(user.getId());
         }
 
-        if (Boolean.TRUE.equals(request.isDefault())) {
-            unsetOtherDefaults(user.getId());
-        }
-
-        address.setRecipient(request.recipient());
-        address.setPhone(request.phone());
-        address.setLine(request.line());
-        address.setCity(request.city());
-        address.setIsDefault(request.isDefault());
-
-        Address saved = addressRepository.save(address);
-
-        ApiResponse<AddressResponse> response = new ApiResponse<>();
-        response.setCode(200);
-        response.setMessage("OK");
-        response.setData(mapToResponse(saved));
-
-        return ResponseEntity.ok(response);
+        boolean isDefault = requestedDefault != null
+                ? requestedDefault
+                : Boolean.TRUE.equals(address.getIsDefault());
+        applyRequest(address, request, isDefault);
+        address = addressRepository.save(address);
+        return ApiResponseSupport.ok(toResponse(address));
     }
 
     @DeleteMapping("/{id}")
     @Transactional
-    public ResponseEntity<ApiResponse<Void>> deleteAddress(Principal principal, @PathVariable Long id) {
-        User user = userRepository.findByEmail(principal.getName())
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "User not found"));
-
-        Address address = addressRepository.findById(id)
+    public ResponseEntity<Void> deleteAddress(Principal principal, @PathVariable Long id) {
+        User user = currentUserService.requireUser(principal);
+        Address address = addressRepository.findByIdAndUserId(id, user.getId())
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Address not found"));
-
-        if (!address.getUser().getId().equals(user.getId())) {
-            throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Access denied");
-        }
-
         addressRepository.delete(address);
-
-        ApiResponse<Void> response = new ApiResponse<>();
-        response.setCode(200);
-        response.setMessage("OK");
-
-        return ResponseEntity.ok(response);
+        return ResponseEntity.noContent().build();
     }
 
-    private void unsetOtherDefaults(Long userId) {
-        List<Address> addresses = addressRepository.findAllByUserId(userId);
-        for (Address addr : addresses) {
-            if (Boolean.TRUE.equals(addr.getIsDefault())) {
-                addr.setIsDefault(false);
-                addressRepository.save(addr);
+    private void clearDefaultFlag(Long userId) {
+        for (Address existing : addressRepository.findAllByUserId(userId)) {
+            if (Boolean.TRUE.equals(existing.getIsDefault())) {
+                existing.setIsDefault(false);
+                addressRepository.save(existing);
             }
         }
     }
 
-    private AddressResponse mapToResponse(Address address) {
+    private void applyRequest(Address address, AddressRequest request, boolean isDefault) {
+        address.setRecipient(request.recipient());
+        address.setPhone(request.phone());
+        address.setLine(request.line());
+        address.setCity(request.city());
+        address.setIsDefault(isDefault);
+    }
+
+    private AddressResponse toResponse(Address address) {
         return new AddressResponse(
                 address.getId(),
                 address.getRecipient(),
                 address.getPhone(),
                 address.getLine(),
                 address.getCity(),
-                address.getIsDefault()
-        );
+                Boolean.TRUE.equals(address.getIsDefault()));
     }
 }
